tests/ui/keeping.stderr
error: field is never read: `taste`
 --> $DIR/keeping.rs:7:5
  |
7 |     taste: String,
  |     ^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> $DIR/keeping.rs:6:14
  |
6 |     #[forbid(dead_code)]
  |              ^^^^^^^^^

error: field is never read: `taste`
 --> $DIR/keeping.rs:7:5
  |
7 |     taste: String,
  |     ^^^^^^^^^^^^^

error: struct is never constructed: `HumanBean1`
  --> $DIR/keeping.rs:13:8
   |
13 | struct HumanBean1 {
   |        ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/keeping.rs:12:10
   |
12 | #[forbid(dead_code)]
   |          ^^^^^^^^^

error: field is never read: `crunch`
  --> $DIR/keeping.rs:14:5
   |
14 |     crunch: String,
   |     ^^^^^^^^^^^^^^
